[tool.poetry]
name = "pycounter"
version = "0.1.0"
description = ""
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
rich = "^13.9.2"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
count = "pycounter.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
