[tool.poetry]
name = "pycounter"
version = "0.2.0"
description = ""
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.2"
setuptools = "^75.5.0"

[tool.poetry.scripts]
count = "pycounter.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
